tests/golden/phase4a/compile-fail/iterator_filter_not_bool.rua
fn main() {
    let values = [1, 2, 3]
        .iter()
        .filter(|value| value + 1)
        .count();
}
